# XqqytSqlite

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  vcpkg.json  技术选型.md  计划书.md
cmake/: CompilerWarnings.cmake  InstallRules.cmake
docs/: BUILD.md
scripts/: env_setup.ps1  package.ps1
src/: main.cpp
src/controller/: CMakeLists.txt  config_manager.cpp  config_manager.h  connection_controller.cpp  connection_controller.h  database_controller.cpp  database_controller.h  driver_factory.cpp  driver_factory.h  sftp_controller.cpp  sftp_controller.h  sync_controller.cpp  sync_controller.h  table_designer_controller.cpp  table_designer_controller.h
src/driver/: CMakeLists.txt
src/driver/mock/: mock_sftp_driver.cpp  mock_sftp_driver.h  mock_sqlite_driver.cpp  mock_sqlite_driver.h  mock_ssh_driver.cpp  mock_ssh_driver.h
src/driver/sftp/: libssh2_sftp_driver.cpp  libssh2_sftp_driver.h
src/driver/sqlite/: local_sqlite_driver.cpp  local_sqlite_driver.h  remote_sqlite_driver.cpp  remote_sqlite_driver.h  sqlite_command_builder.cpp  sqlite_command_builder.h
src/driver/ssh/: known_hosts.cpp  known_hosts.h  libssh2_ssh_driver.cpp  libssh2_ssh_driver.h  ssh_session_guard.cpp  ssh_session_guard.h
src/driver_interface/: CMakeLists.txt  i_local_sqlite_driver.h  i_remote_sqlite_driver.h  i_sftp_driver.h  i_ssh_driver.h  types.h
src/eventbus/: CMakeLists.txt  event_bridge.cpp  event_bridge.h  event_bus_manager.cpp  event_bus_manager.h  event_names.h
src/model/: CMakeLists.txt  app_bridge.cpp  app_bridge.h  connection_list_model.cpp  connection_list_model.h  database_tree_model.cpp  database_tree_model.h  sftp_file_model.cpp  sftp_file_model.h  sql_history_model.cpp  sql_history_model.h  sql_snippet_model.cpp  sql_snippet_model.h  sync_status_model.cpp  sync_status_model.h  table_data_model.cpp  table_data_model.h  table_designer_model.cpp  table_designer_model.h  theme_model.cpp  theme_model.h
src/qml/: CMakeLists.txt  main.qml  qmldir  resources.qrc
src/qml/components/: AboutDialog.qml  AppMenuBar.qml  ConfirmDialog.qml  LoadingOverlay.qml  SideNav.qml  SplashScreen.qml  StatusBar.qml  TabBar.qml  Toast.qml  qmldir
src/qml/editor/: SqlHighlighter.cpp  SqlHighlighter.h
src/qml/i18n/: i18n_manager.cpp  i18n_manager.h  strings_en.ts  strings_zh.ts
src/qml/pages/: ConnectionPage.qml  DataBrowsePage.qml  SettingsPage.qml  SftpManagerPage.qml  SqlEditorPage.qml  TableDesignerPage.qml  qmldir
src/qml/style/: NeumorphismButton.qml  NeumorphismCard.qml  NeumorphismTextField.qml  Theme.qml
src/util/: CMakeLists.txt  data_export.cpp  data_export.h  error_code.cpp  error_code.h  file_utils.cpp  file_utils.h  result.h  sql_formatter.cpp  sql_formatter.h  string_utils.h
tests/: CMakeLists.txt
tests/unit/: test_controller.cpp  test_drivers.cpp  test_eventbus.cpp
